examples/checker_tests/bad/duplicate-headerunion.p4
header h1 { }
header h2 { }
header h3 { }
header h4 { }
header_union h {
    h1 x;
    h2 y;
}

header_union h {
    h3 x;
    h4 y;
}